# tzb

./: .gitignore  AGENTS.md  CLAUDE.md  install_all.sh
docs/: API接口定义.md
docs/fwwb-doc/: main.tex  接口设计.md  数据库设计文档.md  测试报告文档.md  测试案例文档.md  系统设计文档.md  需求分析文档.md  项目完整设计文档.md
docs/fwwb-doc/database/: init.sql
fwwb/: .gitignore  4层通信协议汇总.md  AGENTS.md  CLAUDE.md  HARDWARE_DATA_FORMAT.md  new.md  package-lock.json  package.json  sum.md  test-mysql.js  外设控制代码汇总.md  接口说明文档.md  智慧工厂安全监测控制平台.md  算法设计文档.md  语音接口说明.md
fwwb/1/: CHANGES.md  firmware-changes.diff  更新日志.txt
fwwb/1/src/: ohos_config.json
fwwb/FS-Hi3861-Motor-Driver(Release)/: .mxproject  FS-Hi3861-Motor-Driver.ioc  rmtmp.bat
fwwb/FS-Hi3861-Motor-Driver(Release)/MDK-ARM/: FS-Hi3861-Motor-Driver.uvoptx  FS-Hi3861-Motor-Driver.uvprojx  startup_stm32g030xx.lst  startup_stm32g030xx.s
fwwb/FS-STM32G030-CS100A(Release)/: .mxproject  FS-STM32G030-CS100A.ioc
fwwb/FS-STM32G030-CS100A(Release)/MDK-ARM/: FS-STM32G030-CS100A.uvoptx  FS-STM32G030-CS100A.uvprojx  startup_stm32g030xx.lst
fwwb/backend/: .env.example  .gitignore  config.py  main.py  migrate_tables.py  requirements.txt  run.sh  setup_uos.sh  smart-car-backend.service  test_api.py  vehicle_agent1.2.py
fwwb/backend/app/: __init__.py
fwwb/backend/models/: README.md
fwwb/backend/sql/: add_vision_results.sql  alter_sensor_data.sql  init.sql  redesign_tables.sql
fwwb/backend/tools/: README.md
fwwb/backend/training/: README.md
fwwb/fig/: line_tracking_flowchart.md
fwwb/icons/: generate-png.js  package.json  png-generator.js
fwwb/jx_firm/jx_firm/: 20251226_20251226001.json
fwwb/lidar_docs/: 数据包格式.md
fwwb/ref/智慧农业/设备端/smartFarm/: BUILD.gn  mqtt_recv_task.c  mqtt_send_task.c  oled_show.h  sensor_collect_task.c  sensor_collect_task.h  smartFarm_demo.c  sys_config.h
fwwb/ref/智能温度计/设备端/smartTemp/: BUILD.gn  smartTemp_demo.c
fwwb/webapp/: index.html  package-lock.json  package.json
fwwb/webapp/src/: App.tsx  index.css
fwwb/微信小程序端/: 更新说明.md  演示模式说明.md
fwwb/微信小程序端/smart_agriculture/: package-lock.json  package.json  project.config.json  project.private.config.json
fwwb/微信小程序端/smart_car_udp/: app.js  app.json  app.wxss  package-lock.json  project.config.json  project.private.config.json
fwwb/数字孪生源码/dashboard/: README.md
fwwb/数字孪生源码/dashboard1/: .env.example  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.js
fwwb/数字孪生源码/dashboard2/: README.md  index.html  package-lock.json  package.json  tsconfig.json
hardware/WHEELTEC H30惯导产品资料/: H30惯导产品Agent助手链接.txt
hardware/WHEELTEC H30惯导产品资料/WHEELTEC_H30惯导产品资料_20250515/: 更新说明.txt
hardware/WHEELTEC 乐动单线雷达客户资料/三维模型/: D500(STL-19P)(1).stp
hardware/drivers/driver/: .ch343.ko.cmd  (+9 more)
lidar/: AGENTS.md  CLAUDE.md  HARDWARE_DATA_FORMAT.md  OPTIMIZATION_PLAN.md  README.md  SLAM参数对照表.md  SLAM架构与优化分析.md  a.sh  build_lidar.sh  check_ports.py  imu_calibration.sh  run_ros2_docker.sh  start_ros_slam.md  start_slam.sh  straight_line_drive.py  启动指南.md
lidar/catkin_ws/src/cartographer_ld06/: CMakeLists.txt  package.xml
lidar/catkin_ws/src/cartographer_ld06/configuration_files/: ekf_ld14p_imu.yaml  ld06_imu.lua  ld14p.lua  ld14p_imu.lua  ld14p_imu_wheel.lua  ld14p_wheel.lua
lidar/catkin_ws/src/cartographer_ld06/launch/: cartographer_ld06.launch  ekf_ld14p_imu.launch  imu_filter.launch  rf2o_ld14p.launch
lidar/catkin_ws/src/cartographer_ld06/rviz/: cartographer.rviz
lidar/catkin_ws/src/wheel_odom/: CMakeLists.txt  package.xml
lidar/catkin_ws/src/wheel_odom/launch/: wheel_odom.launch
lidar/catkin_ws/src/wheel_odom/scripts/: wheel_odom_publisher.py
lidar/imu_tf_broadcaster/: CMakeLists.txt
lidar/ldlidar/: CMakeLists.txt
lidar/yesense_imu/: yesense.md
maps/map/: my_map.pgm  my_map.yaml  解释.txt
sjsb/esp32_viewer/: capture_still.py  gui.py  requirements.txt
sjsb/openmv/: main_gui.py  openmv_camera.py  数据格式说明.md
sjsb/szjs/: debug_ssocr.py  set_fixed_roi.py  test_ssocr_python.py
sjsb/szsb/: debug_data.py  infer_crnn.py  test_yolo_crnn_pipeline.py  train_crnn.py  train_crnn_v2.py  train_crnn_v3.py
sjsb/vision_only/: main.py  requirements.txt
tools/: gpu_stress.py
数字孪生源码/dashboard3/: package.json  pnpm-lock.yaml
(+993 files in other folders)
