<?xml version="1.0"?>
<package format="2">
  <name>wheel_odom</name>
  <version>1.0.0</version>
  <description>Receive wheel speed (L_spd/R_spd) from Hi3861 via UDP and publish Odometry + TF for Cartographer</description>
  <maintainer email="tzb@example.com">tzb</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>
