# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("smartFarm_demo") {
    sources = [
        "smartFarm_demo.c",
        "mqtt_send_task.c",
        "mqtt_recv_task.c",
        "sensor_collect_task.c",
        "oled_show.c",
        "//base/iot_hardware/bsp/src/hal_bsp_wifi.c",
        "//base/iot_hardware/bsp/src/hal_bsp_mqtt.c",
        "//base/iot_hardware/bsp/src/hal_bsp_sht20.c",
        "//base/iot_hardware/bsp/src/hal_bsp_pcf8574.c",
        "//base/iot_hardware/bsp/src/hal_bsp_ssd1306.c",
        "//base/iot_hardware/bsp/src/hal_bsp_key.c",
        "//base/iot_hardware/bsp/src/hal_bsp_nfc.c",
        "//base/iot_hardware/bsp/src/hal_bsp_nfc_to_wifi.c",
        "//base/iot_hardware/bsp/nfc/NT3H.c",
        "//base/iot_hardware/bsp/nfc/ndef/rtd/nfcForum.c",
        "//base/iot_hardware/bsp/nfc/ndef/rtd/rtdText.c",
        "//base/iot_hardware/bsp/nfc/ndef/rtd/rtdUri.c",
        "//base/iot_hardware/bsp/nfc/ndef/ndef.c", 
    ]

    include_dirs = [
        "./",
        "//utils/native/lite/include",
        "//kernel/liteos_m/kal/cmsis",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//foundation/communication/wifi_lite/interfaces/wifiservice",
        "//base/iot_hardware/bsp/include",
        "//third_party/pahomqtt/MQTTPacket/src",
        "//third_party/cJSON",
        "//base/iot_hardware/bsp/nfc/ndef",
        "//base/iot_hardware/bsp/nfc/ndef/rtd/",
        "//base/iot_hardware/bsp/nfc"
    ]
}

